Fixed alignment issue with social media

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -108,7 +108,7 @@ body {
 
   position: fixed;
   top: 30px;
-  left: calc(50% - 98px);
+  left: calc(50% - 125px);
 
   z-index: 100;
 
